# sonustemper

./: .dockerignore  .env.example  .gitattributes  .gitignore  BASE_PROMPT.md  CHANGELOG.md  CODEX_RULES.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_CONTEXT.md  PROJECT_MEMORY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.dev.yml  docker-compose.yml  nginx.conf  nginx.conf.template  old.docker-compose.dev.yml  old.docker-compose.yml  proxy-entrypoint.sh  pyproject.toml  requirements.txt
LICENSES/: FFMPEG-LGPL-2.1.txt  HTMX-LICENSE 2.txt  THIRD_PARTY_SUMMARY 2.md  THIRD_PARTY_SUMMARY.md  WAVESURFER-LICENSE 2.txt
dockerconfig/: docker-compose.yml
docs/: CNAME  SUMMARY.md  _config.yml  ai-toolkit.md  analyze.md  compare.md  eq.md  index.md  library.md  mastering.md  noise-removal.md  preset-management.md  tagging.md  troubleshooting.md  workflows.md
example-presets/: acoustic.json  clean.json  foe_acoustic.json  rock.json  warm.json
images/: sonustemper 2.icns  sonustemper.icns
legacy/: docker-compose.ffmpeg-old.yml
mastering/: README.md  docker-compose.yml  logging_util.py  master.py  master_pack.py
mastering-ui/: Dockerfile  README.md  docker-compose.yml
presets/: README.md  blues_country.json  foe_metal.json  loud.json  modern.json
scripts/: licenses_report 2.py
sonustemper/: __init__.py  desktop_main.py  desktop_paths.py  library.py  library_db.py  logging_util.py  macos_app.py  master_pack.py  server.py  smoke_test.py  storage.py  tagger.py  (+1 more)
sonustemper.egg-info/: PKG-INFO  SOURCES.txt  requires 2.txt  top_level 2.txt
(+107 files in other folders)
