[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sonustemper"
version = "2.0.0"
description = "SonusTemper backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn==0.34.0",
  "python-multipart==0.0.20",
  "mutagen==1.47.0",
  "jinja2==3.1.4",
]

[project.optional-dependencies]
dev = [
  "pyinstaller==6.11.1",
]
macos = [
  "rumps==0.4.0",
]

[tool.setuptools.packages.find]
include = ["sonustemper"]
